--- a/EasyAccess/i18n/default.json
+++ b/EasyAccess/i18n/default.json
@@ -1,30 +1,30 @@
 {
   // Feature Config
-  "config.collect-outputs-distance.name": "Collect Distance",
-  "config.collect-outputs-distance.tooltip": "The tiles away from the player that producers can be collected from.",
-  "config.dispense-inputs-distance.name": "Dispense Distance",
-  "config.dispense-inputs-distance.tooltip": "The tiles away from the player that producers can be dispensed into.",
-  "config.dispense-inputs-priority.name": "Dispense Input Priority",
-  "config.dispense-inputs-priority.tooltip": "Producers with a higher priority will be dispensed into first.",
-  "config.do-dig-spots.name": "Do Dig Spots",
-  "config.do-dig-spots.tooltip": "Collect will grab from dig spots.",
-  "config.do-forage.name": "Do Forage",
-  "config.do-forage.tooltip": "Collect will have foraging drop as item debris.",
-  "config.do-machines.name": "Do Machines",
-  "config.do-machines.tooltip": "Collect will grab outputs from machines.",
-  "config.do-terrain.name": "Do Terrain",
-  "config.do-terrain.tooltip": "Collect will shake terrain such as bushes and trees.",
+  "config.collect-outputs-distance.name": "Радіус збору",
+  "config.collect-outputs-distance.tooltip": "Радіус збору з устаткування",
+  "config.dispense-inputs-distance.name": "Радіус дозування",
+  "config.dispense-inputs-distance.tooltip": "Радіус дозування устаткування",
+  "config.dispense-inputs-priority.name": "Пріорітет дозування",
+  "config.dispense-inputs-priority.tooltip": "Устаткування з вищим пріорітетом будуть дозовані перші",
+  "config.do-dig-spots.name": "Скопувати мотикою ґрунт",
+  "config.do-dig-spots.tooltip": "Збір з місця скопування",
+  "config.do-forage.name": "Збиральство",
+  "config.do-forage.tooltip": "Зібрати дикі ягоди, цибулю і таке інше що лежить на відкритому ґрунті",
+  "config.do-machines.name": "Збір з устаткування",
+  "config.do-machines.tooltip": "Збір з ремісничого обладнання",
+  "config.do-terrain.name": "Трясти кущі, дерева",
+  "config.do-terrain.tooltip": "Збір з місця тряски",
   // Config Controls
-  "config.collect-items.name": "Collect Items Button",
-  "config.collect-items.tooltip": "Key to collect items from accessible producers.",
-  "config.dispense-items.name": "Dispense Items Button",
-  "config.dispense-items.tooltip": "Key to dispense items into accessible producers.",
+  "config.collect-items.name": "Клавіша збору",
+  "config.collect-items.tooltip": "Клавіша збору предметів",
+  "config.dispense-items.name": "Клавіша дозування",
+  "config.dispense-items.tooltip": "Клавіша дозування устаткування",
   // Config Pages
-  "section.general.name": "General",
-  "section.general.description": "General customization options for features.",
-  "section.controls.name": "Controls",
-  "section.controls.description": "Controller/keyboard configurations.",
+  "section.general.name": "Загальне",
+  "section.general.description": "Загальні налаштування",
+  "section.controls.name": "Керування",
+  "section.controls.description": "Налаштування Геймпад/Клавіатура",
   // UI - Button
-  "button.collect-outputs.name": "Collect Outputs",
-  "button.dispense-inputs.name": "Dispense Inputs"
+  "button.collect-outputs.name": "Клавіша збору",
+  "button.dispense-inputs.name": "Клавіша дозування"
 }
